fix: fixed text wrapping in jokes

--- a/src/app/favourites/components/favourite/favourite.component.scss
+++ b/src/app/favourites/components/favourite/favourite.component.scss
@@ -58,6 +58,10 @@
   height: 14px;
 }
 
+.favourite-text {
+  overflow-wrap: anywhere;
+}
+
 .favourite-footer {
   margin-top: 20px;
   display: flex;
